k8s/base/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: gamehouse
  labels:
    app.kubernetes.io/name: redis
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gamehouse
  labels:
    app.kubernetes.io/name: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
